Release another patch to fix the phone squish

--- a/styles.css
+++ b/styles.css
@@ -706,9 +706,9 @@ input:hover {
 }
 
 /* Media query for phone screen squishing */
-@media only screen and (min-width: 600px) and (max-height: 269px) and (orientation: portrait) {
+@media only screen and (min-width: 250px) and (max-height: 350px) and (orientation: portrait) {
   #form-box {
-    width: 50%;
+    width: 70%;
     height: 90%;
   }
 
